# hello-grpc

./: .gitignore  go.mod  next-task.md  readme.md
.github/workflows/: ci.yml
api/: greeter.proto
client/: main.go
go-vemu/: go.mod
go-vemu/api/v1/: vemu_service.pb.go  vemu_service.proto  vemu_service_grpc.pb.go
go-vemu/cmd/server/: main.go  server_integration_test.go
go-vemu/internal/core/: cgo_core.go  cgo_core_test.go  core.go  dummy.go  new.go  new_cgo.go
server/: main.go
vemu_service/: CMakeLists.txt
vemu_service/cgo_bridge/: Makefile  core_bridge.cpp  core_bridge.h  test_decoder  test_decoder_csr  test_decoder_i  test_decoder_m
vemu_service/cmake/: protobuf-generate.cmake
vemu_service/include/: RISCV.h  venus_ext.h
vemu_service/include/csr/: CsrFile.h
vemu_service/include/decoder/: AddInstruction.h  ArithmeticRInstruction.h  BranchInstruction.h  CsrInstruction.h  Decoder.h  EbreakInstruction.h  ITypeImmInstruction.h  Instruction.h  JalInstruction.h  JalrInstruction.h  LoadInstruction.h  MretInstruction.h  MulDivInstruction.h  StoreInstruction.h
vemu_service/include/mem/: MMU.h
vemu_service/src/: RISCV.cpp  main.cpp  main_original.cpp  venus_ext.cpp  venus_mem_access.cpp
vemu_service/src/csr/: CsrFile.cpp
vemu_service/src/decoder/: AddInstruction.cpp  ArithmeticRInstruction.cpp  BranchInstruction.cpp  CsrInstruction.cpp  Decoder.cpp  EbreakInstruction.cpp  ITypeImmInstruction.cpp  JalInstruction.cpp  JalrInstruction.cpp  LoadInstruction.cpp  MretInstruction.cpp  MulDivInstruction.cpp  StoreInstruction.cpp
vemu_service/src/mem/: MMU.cpp
vemu_service/tests/: compare_decoder.cpp  compare_decoder_branch.cpp  compare_decoder_csr.cpp  compare_decoder_i.cpp  compare_decoder_jal.cpp  compare_decoder_jalr.cpp  compare_decoder_m.cpp  interrupt_basic.cpp  interrupt_mret.cpp  isa_i.cpp  isa_m.cpp  isa_r.cpp  memory_access_test.cpp  trap_flow_test.cpp  trap_illegal.cpp  trap_misaligned.cpp
